<resources>
    <string name="hello">Hello World, EuphraxiyaActivity!</string>
    <string name="app_name">Eupraxia</string>
      <string-array name="country_arrays">
        <item>21H</item>
        <item>19B</item>
        <item>M5</item>
        <item>L19B</item>
        <item>L21H</item>
        <item>S517</item>
        <item>S570</item>
        <item>ST151</item>
        <item>S566</item>
        <item>S521</item>
        <item>S568</item>
        <item>S555</item>
        <item>X555</item>
        <item>W19BV</item>
        <item>W219AV</item>
        <item>M19A</item>
        <item>S587</item>
        <item>W570V</item>
        <item>W21HV</item>
        <item>X551A</item>
        <item>19P</item>
    </string-array>
    <string name="sTvContraTitle">Contraption</string>
    <string name="sTvContraTag"> “Imagination is the highest kite one can fly “</string>
    <string name="sTvContraIntroPart1">\tAre you one of those dexterous minds who could always think of an obscure conclusion to a easy task?? Then, this is the absolute platform to portray all your</string>
    <string name="sTvContraIntroPart2">natural endowments. Presenting "CONTRAPTION" at EUPRAXIA2K12.  This event confines to the testing of your hardheaded cognition in various fields of engineering. Bring out your empowered skills that would innovate   a complicated solution for the easiest task.</string>
    <string name="sTvContraObjective"><u>OBJECTIVE/PROBLEM STATEMENT:</u></string>
    <string name="sTvContraQues">An ARROW should strike a BULLSEYE(DARTBOARD)</string>
    <string name="sTvContraPoint1">The bullseye(dartboard) will be provided by us.</string>
    <string name="sTvContraPoint2">The dartboard will consist of concentric circles each of different dimension</string>
    <string name="sTvContraPoint3">Points will be awarded based on the accuracy of the hit</string>
    <string name="sTvContraPoint4">Full points will be awarded if arrow hits the center (dia=5cm) circle and points will vary depending upon the accuracy.</string>
    <string name="sTvContraRules"><u>Rules and Regulation</u></string>
    <string name="sTvContraMail">MAIL US YOUR TEAM’s ABSTRACT  TO
contraptionatssn@gmail.com</string>
    <string name="sTvContraRule1">Register your Team </string>
    <string name="sTvContraRule2">2. A team should consist a maximum of 5 members. Teams can consist of members from different colleges. </string>
    <string name="sTvContraRule3">3. The team should mail us the detailed abstract of all the steps and energy conversions involved in each step. </string>
    <string name="sTvContraScoring"><u>Scoring Pattern</u></string>
    <string name="sTvContraTabTitle1"><b><u>Energy Conversions Involved</u>
</b></string>
    <string name="sTvContraTabTitle2"><b><u>points given</u>
</b></string>
    <string name="sTvContraScoring1">Use of more DOMINOES will fetch more points. </string>
    <string name="sTvContraScoring2">Arrow striking the </string>
    <string name="sTvContraScoring2Part1"> 5cm circle – 100 points</string>
    <string name="sTvContraScoring2Part2">  10cm circle – 50 points</string>
    <string name="sTvContraScoring2Part3">  20cm circle – 30 points </string>
    <string name="sTvContraScoring2Part4">  30cm circle – 20 points </string>
    <string name="sTvContraScoring3">  For each manual intervention, 10 points will be deducted</string>
    <string name="sTvContraScoring4"> Parallel steps will increase the points.</string>
    <string name="sTvContraScoreCalculation"><b><u>Score Calculation</u>
</b>.</string>
    <string name="sTvContraScoreFormula"> Total = Objective points + (number of energy conversions * points for the corresponding energy conversion) + Bonus points – Manual interventions</string>
    <string name="sTvContraImportantDates"><b><u>Important Dates</u>
</b>.</string>
    <string name="sTvContraDate1"> Last date for submission of the ABSTRACT-<b>20th AUG</b></string>
    <string name="sTvContraDate2"> Selection notification-<b>22nd AUG</b></string>
    <string name="sTvContraDate3"><b>Final Event – 28th AUG</b></string>
    <string name="sTvContraContacts"><b><u>Contacts</u>
</b>.</string>
    <string name="sTvContraMnk"><b>M.N.Karthikeyan:</b>9789992607</string>
    <string name="sTvContraGayatri"><b>Gayatri.P</b></string>
    <string name="sTvContraMailEnd"><b>Mail id:</b>contraptionatssn@gmail.com</string>
    <string name="sTvPaperPresTitle">Paper Presentation</string>
    <string name="sTvPaperPresTag">"I am enough of an artist to draw freely upon my imagination. Imagination is more important than knowledge. Knowledge is limited. Imagination encircles the world." -Albert Einstein</string>
    <string name="sTvPaperPresIntroPart1">\tImagine you went out in the hallway, stumbled into an inter-dimensional portal, which brought you five thousand years into the future. There you took </string>
    <string name="sTvPaperPresIntroPart2">advantage of the advanced technology to build a time machine. Now you’re back to bring us all with you to the year 7010 where we are transported to work at the Thinkatorium by telepathically controlled flying dolphins. If you’re that Sheldon Cooper-esque kind of person who has ‘Science’ for a middle name you’ve stumbled upon the right place. Eupraxia is back!
The class of engineers that ever tirelessly drudges on towards attaining technological Nirvana is an endangered species.  We offer you a platform to compete against the cream of the left few. Let that imagination of yours out of the cage. Come up with technical papers on your solutions for current problems or original research in the realm of electrical and electronics. A range of topics have been laid at your disposal. If the topics our simple minds offer you fail to seduce your genius, no problem! You are not restricted from freelancing, so you can conjure up papers under other topics you find apposite and relevant to the essence of Electrical and Electronics Engineering.
But don’t discount on your originality. Remember, plagiarism is a bitch.</string>
    <string name="sTvPaperPresTopics"><b><u>Topics</u>
</b>
<u></u></string>
    <string name="sTvPaperPresFormat"><b><u>Format</u>
</b></string>
    <string name="sTvPaperPresRules"><b><u>Rules</u>
</b></string>
    <string name="sTvRoboticsTitle">Robotics</string>
    <string name="sTvRoboticsTag"></string>
    <string name="sTvRoboticsMine"><b><u>MineSweeper</u>
</b>
<u></u></string>
    <string name="sTvRoboticsGameRules"><b>Game Rules</b></string>
    <string name="sTvRoboticsPrelims"><b><u>Prelims</u>
</b>
<u></u></string>
     <string name="sTvCircuitDesign">  CirCuit Design
</string>
     <string name="sTvContraTable"> Last Date for \n Submission of \n Abstract
</string>
   <string name="sTvContraTable1"> Selection \n Notification
</string>
   <string name="sTvContraScoringPattern">Energy   \nConversions   \nInvolved
</string>
 <string name="sTvcontraScroing2">Electrical / \nElectronic 
</string>
 <string name="sTvPaper1">"I am enough of an artist to draw freely upon my imagination. Imagination is more important than knowledge. Knowledge is limited. Imagination encircles the world." \n                    -Albert Einstein\n\n

Imagine you went out in the hallway, stumbled into an inter-dimensional portal, which brought you five thousand years into the future. There you took advantage of the advanced technology to build a time machine. Now you’re back to bring us all with you to the year 7010 where we are transported to work at the Thinkatorium by telepathically controlled flying dolphins. If you’re that Sheldon Cooper-esque kind of person who has ‘Science’ for a middle name you’ve stumbled upon the right place. Eupraxia is back!\n\n
The class of engineers that ever tirelessly drudges on towards attaining technological Nirvana is an endangered species.  We offer you a platform to compete against the cream of the left few. Let that imagination of yours out of the cage. Come up with technical papers on your solutions for current problems or original research in the realm of electrical and electronics. A range of topics have been laid at your disposal. If the topics our simple minds offer you fail to seduce your genius, no problem! You are not restricted from freelancing, so you can conjure up papers under other topics you find apposite and relevant to the essence of Electrical and Electronics Engineering.\n\n
But don’t discount on your originality. Avoid plagiarism .</string>
 <string name="sTvPaperPresTopic1">1. Renewable energy (EE01)
</string>
    <string name="sTvPaperPresTopic2">2. Smart grids (EE02)</string>
    <string name="sTvPaperPresTopic3">3. Power electronics and drives (EE03)
</string>
    <string name="sTvPaperPresTopic4">4. Power systems (EE04)
</string>
    <string name="sTvPaperPresTopic5">5. Intelligent control and robotics (EE05)
</string>
    <string name="sTvPaperPresTopic6">6. Embedded systems (EE06)
</string>
    <string name="sTvPaperPresTopic7">7. Innovative solutions to energy crisis (EE07)
</string>
    <string name="sTvPaperPresTopic8">8. FACTS, SCADA and HVDC (EE08)
</string>
    <string name="sTvPaperPresTopic9">9. Other innovative topics relevant to the field of Electronics and Electrical Engineering (EE09)    
</string>
    <string name="sTvPaperPresTopicOther">Other papers under any topic pertaining to the fields of Electrical and Electronics Engineering are also encouraged.
</string>
    <string name="sTvPaperPresFormat1">All papers must follow IEEE two column format 
</string>
    <string name="sTvPaperPresFormat2">File type- .doc or .docx
</string>
    <string name="sTvPaperPresFormat3">Font- Times New Roman
</string>
    <string name="sTvPaperPresFormat4">Size- 12
</string>
    <string name="sTvPaperPresFormat5">No. of pages- maximum 6
</string>
    <string name="sTvPaperPresRule1">Maximum number of participants per paper is two. The participants may belong to same or different institutions.
</string>
    <string name="sTvPaperPresRule2">Completed papers must be sent to "presentapaper@eupraxia.co.in" by 18th August, 2012. Papers sent after the deadline will not be considered. Please add the topic code in the subject of the e-mail (E.g.: EE01 for Renewable energy) and clearly specify the participants’ contact details in the body of the e-mail.
</string>
    <string name="sTvPaperPresRule3">A single participant may be part of multiple teams and may submit as many papers as he wishes to, provided they are all unique. A single paper may not be repeated by a different set of authors.
</string>
    <string name="sTvPaperPresRule4">List of selected papers will be displayed in the website latest by 23rd August, 2012.
</string>
    <string name="sTvPaperPresRule5">Selected participants will also be intimated by e-mail.
</string>
    <string name="sTvPaperPresRule6">Authors of selected papers must be prepared to make a presentation not exceeding 8 minutes (+2 minutes for clearance of doubts) on 28th August, 2012 at our college.
</string>
    <string name="sTvPaperPresRule7">All works must be original. Plagiarism will be strictly monitored and the authors of plagiarized papers will not be allowed to submit any other paper.
</string>
    <string name="sTvPaperPresRule8">The decision of the judges will be final and binding.
</string>
</resources>